--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,32 +1,45 @@
-name: Generate ICS
+name: Update Calendar
 
 on:
   schedule:
-    # run daily at 03:00 UTC (adjust if you like)
-    - cron: '0 3 * * *'
-  workflow_dispatch: # allow manual run from Actions tab
+    - cron: "0 6 * * *"   # runs every day at 06:00 UTC
+  workflow_dispatch:      # allow manual trigger
+
+permissions:
+  contents: write         # needed to push changes back
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false   # disable default credentials so we use our own
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.x"
 
       - name: Install dependencies
-        run: pip install requests beautifulsoup4 ics
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests beautifulsoup4 ics
 
-      - name: Run generator
+      - name: Run scraper
         run: python generate_bba_ics.py
 
-      - name: Commit generated .ics
+      - name: Commit and push if changed
         run: |
           git config user.name "github-actions[bot]"
-          git config user.email "actions@github.com"
-          git add calendar.ics || true
-          git diff --cached --quiet || (git commit -m "Update calendar.ics" && git push)
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add calendar.ics
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Update calendar.ics"
+            git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
+          fi
 
